--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -80,7 +80,7 @@ h2 {
         right: 10px;
     }
 
-    .city-weather-info {
+    #current-weather-condition {
         width: 50%;
         height: auto;
         border: 2px solid grey;
