--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Varela+Round&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +6,8 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: #32404e;
 }
 
 .favorite-btn {
@@ -14,24 +16,107 @@ body {
   cursor: pointer;
 }
 .favorite-btn svg path {
-  fill: #ED8A19;
+  fill: #fdfdfd;
 }
 .favorite-btn:hover svg path {
   fill: #e9a14f;
 }
 
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo-wrapper h1 {
+  margin-left: 5px;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+.favorite-city-dropdown {
+  width: 300px;
+  height: 45px;
+  padding: 0.5rem;
+  background-color: #fefefe;
+  border-radius: 5px;
+  border-color: #b0d0e6;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.1rem;
+  color: #32404e;
+}
+@media screen and (max-width: 830px) {
+  .favorite-city-dropdown {
+    width: 49%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .favorite-city-dropdown {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+.main-search {
+  width: 300px;
+  height: 45px;
+  background-color: #C3E6FF;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width: 830px) {
+  .main-search {
+    width: 49%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .main-search {
+    order: -1;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+.main-search svg {
+  margin: 0 5px;
+}
+.main-search #search-input {
+  width: 250px;
+  height: 100%;
+  background-color: #C3E6FF;
+  border: 0;
+  margin-left: 5px;
+}
+.main-search #search-input::placeholder {
+  font-size: 1rem;
+}
+.main-search #search-input:focus {
+  outline: 0;
+}
+.main-search #search-input[type=search] {
+  font-size: 1.1rem;
+  color: #32404e;
+}
+
 header {
-  background-color: lightgray;
-  font-size: 2rem;
+  background-color: #C3E6FF;
+  font-size: 2.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem;
+  font-family: "Varela Round", sans-serif;
+  border-bottom: 2px solid #bbddf5;
+}
+@media screen and (max-width: 500px) {
+  header {
+    font-size: 1.8em;
+  }
 }
 
 main {
-  background-color: white;
+  background-color: #fefefe;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -44,21 +129,24 @@ section {
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 1.25rem;
-  margin-bottom: 0.5rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  font-family: "Varela Round", sans-serif;
 }
 
 .main-section {
-  width: 80%;
+  width: 90vw;
   height: auto;
   min-height: 500px;
-  border: 2px solid grey;
+  background-color: #FFF9F1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 1rem;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .container {
@@ -73,6 +161,11 @@ h2 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+@media screen and (max-width: 500px) {
+  .input-section {
+    flex-direction: column;
+  }
 }
 
 .current-weather-section {
@@ -90,22 +183,129 @@ h2 {
   position: relative;
   z-index: 1;
   padding: 1rem;
-  border: 2px solid grey;
+}
+.current-weather-section .current-container {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 400px;
+  border-radius: 10px;
+}
+.current-weather-section .current-container--day {
+  background-image: url("/images/daytime-photo.jpeg");
+}
+.current-weather-section .current-container--night {
+  background-image: url("/images/nighttime-photo.jpeg");
+}
+.current-weather-section .bg-overlay {
+  position: absolute;
+  z-index: 2;
+  background-color: white;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0.4;
+}
+.current-weather-section .current-wrapper {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #32404e;
+  padding: 1.5rem;
+  border-radius: 10px;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width: 500px) {
+  .current-weather-section .current-wrapper {
+    width: 95%;
+    padding: 1rem;
+  }
+}
+.current-weather-section .current-wrapper hr {
+  width: 60%;
+  height: 3px;
+  border: 0;
+  background-color: #32404e;
+}
+.current-weather-section .city-temperature {
+  margin: 1rem 0;
+}
+.current-weather-section .city-name {
+  font-family: "Varela Round", sans-serif;
+  font-size: 2.5em;
+  text-align: center;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 830px) {
+  .current-weather-section .city-name {
+    font-size: 2.2em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .current-weather-section .city-name {
+    font-size: 2em;
+  }
+}
+.current-weather-section #current-temperature {
+  font-family: "Varela Round", sans-serif;
+  font-size: 5em;
+}
+@media screen and (max-width: 830px) {
+  .current-weather-section #current-temperature {
+    font-size: 4em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .current-weather-section #current-temperature {
+    font-size: 2.8em;
+  }
+}
+.current-weather-section .temperature-unit {
+  font-size: 4rem;
+}
+@media screen and (max-width: 830px) {
+  .current-weather-section .temperature-unit {
+    font-size: 3em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .current-weather-section .temperature-unit {
+    font-size: 2em;
+  }
 }
 .current-weather-section .favorite-btn {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   top: 10px;
   right: 10px;
+  padding: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
 .current-weather-section #current-weather-condition {
-  width: 50%;
+  width: 100%;
   height: auto;
-  border: 2px solid grey;
+  border: 2px solid #32404e;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-size: 1.8rem;
+  padding: 0.5rem;
+}
+@media screen and (max-width: 830px) {
+  .current-weather-section #current-weather-condition {
+    font-size: 1.6em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .current-weather-section #current-weather-condition {
+    font-size: 1.22em;
+  }
 }
 
 .daily-forcast-section {
@@ -120,12 +320,29 @@ h2 {
   width: 100%;
   height: auto;
 }
+@media screen and (max-width: 830px) {
+  .daily-forcast-section .container {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
 .daily-forcast-section .daily-tile {
-  border: 2px solid grey;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px 0px;
   border-radius: 5px;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   width: 25%;
+}
+@media screen and (max-width: 830px) {
+  .daily-forcast-section .daily-tile {
+    width: 48%;
+    margin: 0 0 0.75rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .daily-forcast-section .daily-tile {
+    width: 100%;
+  }
 }
 .daily-forcast-section .day-one {
   margin-left: 0;
@@ -133,10 +350,14 @@ h2 {
 .daily-forcast-section .day-five {
   margin-right: 0;
 }
+.daily-forcast-section .daily-day {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
 
 .tile-top-content,
 .tile-bottom-content {
-  padding: 0.5rem;
+  padding: 0.75rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -144,7 +365,28 @@ h2 {
 }
 
 .tile-top-content {
-  border-bottom: 2px solid grey;
+  border-bottom: 2px solid #f3ae53;
+  background-color: #C3E6FF;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.tile-bottom-content {
+  background-color: #fefefe;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+.tile-bottom-content .temp-wrapper {
+  margin: 0 0 0.25rem;
+}
+.tile-bottom-content .high-temp {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #598AE2;
+}
+
+.daily-tile-top-content {
+  background-color: #FFD47C;
 }
 
 .extra-info {
@@ -163,12 +405,37 @@ h2 {
   width: 100%;
   height: auto;
 }
+@media screen and (max-width: 1220px) {
+  .hours-forcast-section .container {
+    flex-wrap: wrap;
+  }
+}
 .hours-forcast-section .hours-tile {
-  border: 2px solid grey;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px 0px;
   border-radius: 5px;
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+  width: 12%;
   min-width: 120px;
+}
+@media screen and (max-width: 1220px) {
+  .hours-forcast-section .hours-tile {
+    width: 24%;
+    margin: 0 0 0.75rem;
+  }
+}
+@media screen and (max-width: 830px) {
+  .hours-forcast-section .hours-tile {
+    width: 49%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .hours-forcast-section .hours-tile {
+    width: 100%;
+  }
+}
+.hours-forcast-section .hours-tile .tile-top-content {
+  border-color: #b0d0e6;
 }
 .hours-forcast-section .tile-12am {
   margin-left: 0;
@@ -181,6 +448,11 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 0.75rem;
+}
+.hours-forcast-section .time {
+  font-weight: bold;
+  font-size: 1.22rem;
 }
 
 /*# sourceMappingURL=main.css.map */
