--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,15 +1,21 @@
 header {
-    background-color: lightgray;
-    font-size: 2rem;
+    background-color: $color-header;
+    font-size: 2.5rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 1.5rem;
+    font-family: $font-header;
+    border-bottom: 2px solid $header-border;
+
+    @media screen and (max-width: $mobile-width) {
+        font-size: 1.8em;
+    }
 }
 
 main {
-    background-color: white;
+    background-color: $color-bg;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -23,21 +29,24 @@ section {
 
 
 h2 {
-    font-weight: bold;
-    font-size: 1.25rem;
-    margin-bottom: 0.5rem;
+    font-weight: 700;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+    font-family: $font-header;
 }
 
 .main-section {
-    width: 80%;
+    width: 90vw;
     height: auto;
     min-height: 500px;
-    border: 2px solid grey;
+    background-color: $color-section;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 1rem;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .container {
@@ -52,7 +61,12 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: $mobile-width) {
+        flex-direction: column;
+    }
 }
+
 
 .current-weather-section {
     width: 100%;
@@ -69,25 +83,128 @@ h2 {
         position: relative;
         z-index: 1;
         padding: 1rem;
-        border: 2px solid grey;
+    }
+
+    .current-container {
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 400px;
+        border-radius: 10px;
+
+        &--day {
+            background-image: url($daytime-bg-pic);
+        }
+        &--night {
+            background-image: url($nighttime-bg-pic);
+        }
+    }
+
+    .bg-overlay {
+        position: absolute;
+        z-index: 2;
+        background-color: white;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        opacity: 0.4;
+    }
+
+    .current-wrapper {
+        background-color: rgba(255, 255, 255, 0.4);
+        color: $color-font;
+        padding: 1.5rem;
+        border-radius: 10px;
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        @media screen and (max-width: $mobile-width) {
+            width: 95%;
+            padding: 1rem;
+        }
+
+        hr {
+            width: 60%;
+            height: 3px;
+            border: 0;
+            background-color: $color-font;
+        }
+    }
+
+    .city-temperature {
+        margin: 1rem 0;
+    }
+
+    .city-name {
+        font-family: $font-header;
+        font-size: 2.5em;
+        text-align: center;
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+
+        @media screen and (max-width: $tablet-width) {
+            font-size: 2.2em;
+        }
+        @media screen and (max-width: $mobile-width) {
+            font-size: 2em;
+        }
+    }
+
+    #current-temperature {
+        font-family: $font-header;
+        font-size: 5em;
+
+        @media screen and (max-width: $tablet-width) {
+            font-size: 4em;
+        }
+        @media screen and (max-width: $mobile-width) {
+            font-size: 2.8em;
+        }
+    }
+
+    .temperature-unit {
+        font-size: 4rem;
+
+        @media screen and (max-width: $tablet-width) {
+            font-size: 3em;
+        }
+        @media screen and (max-width: $mobile-width) {
+            font-size: 2em;
+        }
     }
 
 
     .favorite-btn {
         position: absolute;
-        z-index: 2;
+        z-index: 3;
         top: 10px;
         right: 10px;
+        padding: 0.5rem;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
     }
 
     #current-weather-condition {
-        width: 50%;
+        width: 100%;
         height: auto;
-        border: 2px solid grey;
+        border: 2px solid $color-font;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        font-size: 1.8rem;
+        padding: 0.5rem;
+
+        @media screen and (max-width: $tablet-width) {
+            font-size: 1.6em;
+        }
+        @media screen and (max-width: $mobile-width) {
+            font-size: 1.22em;
+        }
     }
 }
 
@@ -102,27 +219,47 @@ h2 {
         align-items: flex-start;
         width: 100%;
         height: auto;
+
+        @media screen and (max-width: $tablet-width) {
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
     }
 
     .daily-tile {
-        border: 2px solid grey;
+        box-shadow: $tile-box-shadow;
         border-radius: 5px;
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         width: 25%;
+
+        @media screen and (max-width: $tablet-width) {
+            width: 48%;
+            margin: 0 0 0.75rem;
+        }
+
+        @media screen and (max-width: $mobile-width) {
+            width: 100%;
+        }
     }
 
     .day-one {
         margin-left: 0;
     }
+
     .day-five {
         margin-right: 0;
+    }
+
+    .daily-day {
+        font-weight: bold;
+        font-size: 1.5rem;
     }
 }
 
 .tile-top-content,
 .tile-bottom-content {
-    padding: 0.5rem;
+    padding: 0.75rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -130,7 +267,30 @@ h2 {
 }
 
 .tile-top-content {
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid $daily-tile-border;
+    background-color: $color-header;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+.tile-bottom-content {
+    background-color: $color-bg;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+
+    .temp-wrapper {
+        margin: 0 0 0.25rem;
+    }
+
+    .high-temp {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: $high-temp-color;
+    }
+}
+
+.daily-tile-top-content {
+    background-color: $hour-tile-bg;
 }
 
 .extra-info {
@@ -148,19 +308,42 @@ h2 {
         align-items: flex-start;
         width: 100%;
         height: auto;
+
+        @media screen and (max-width: $desktop-width) {
+            flex-wrap: wrap;
+        }
     }
 
     .hours-tile {
-        border: 2px solid grey;
+        box-shadow: $tile-box-shadow;
         border-radius: 5px;
         margin-left: 0.25rem;
         margin-right: 0.25rem;
+        width: 12%;
         min-width: 120px;
+
+        @media screen and (max-width: $desktop-width) {
+            width: 24%;
+            margin: 0 0 0.75rem;
+        }
+
+        @media screen and (max-width: $tablet-width) {
+            width: 49%;
+        }
+
+        @media screen and (max-width: $mobile-width) {
+            width: 100%;
+        }
+
+        .tile-top-content {
+            border-color: $hour-tile-border;
+        }
     }
 
     .tile-12am {
         margin-left: 0;
     }
+
     .tile-9pm {
         margin-right: 0;
     }
@@ -170,6 +353,12 @@ h2 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-size: 0.75rem;
+    }
+
+    .time {
+        font-weight: bold;
+        font-size: 1.22rem;
     }
 
 }
