--- a/scss/main.css
+++ b/scss/main.css
@@ -21,6 +21,9 @@ body {
 .favorite-btn:hover svg path {
   fill: #e9a14f;
 }
+.favorite-btn.favorited svg path {
+  fill: #e9a14f;
+}
 
 .logo-wrapper {
   display: flex;
@@ -59,7 +62,7 @@ body {
 .main-search {
   width: 300px;
   height: 45px;
-  background-color: #C3E6FF;
+  background-color: #c3e6ff;
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -83,7 +86,7 @@ body {
 .main-search #search-input {
   width: 250px;
   height: 100%;
-  background-color: #C3E6FF;
+  background-color: #c3e6ff;
   border: 0;
   margin-left: 5px;
 }
@@ -102,7 +105,7 @@ body {
 }
 
 header {
-  background-color: #C3E6FF;
+  background-color: #c3e6ff;
   font-size: 2.5rem;
   display: flex;
   flex-direction: row;
@@ -142,7 +145,7 @@ h2 {
   width: 90vw;
   height: auto;
   min-height: 500px;
-  background-color: #FFF9F1;
+  background-color: #fff9f1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -369,7 +372,7 @@ h2 {
 
 .tile-top-content {
   border-bottom: 2px solid #f3ae53;
-  background-color: #C3E6FF;
+  background-color: #c3e6ff;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
 }
@@ -385,11 +388,11 @@ h2 {
 .tile-bottom-content .high-temp {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #598AE2;
+  color: #598ae2;
 }
 
 .daily-tile-top-content {
-  background-color: #FFD47C;
+  background-color: #ffd47c;
 }
 
 .extra-info {
