--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,7 @@ h2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   width: 25%;
+  cursor: pointer;
 }
 @media screen and (max-width: 830px) {
   .daily-forcast-section .daily-tile {
